[package]
name = "unpack_sgzhxdl_cli"
version = "0.1.0"
edition = "2021"
description = "三幻立绘资源复原辅助工具"
authors = ["hycen6 <dconghua@gmail.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rayon = "1.8"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
